--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.5",
+    "knex-cleaner": "^1.3.1",
     "node": "^14.11.0",
     "nodemon": "^2.0.4",
     "pg": "^8.3.3"
